@@ -1384,7 +1384,7 @@
         <segtitle>&testsuites;</segtitle>
 
         <seglistitem>
-          <seg>Not run. Requires Man-DB test suite package</seg>
+          <seg>Util-linux</seg>
         </seglistitem>
       </segmentedlist>
 
