@@ -36,6 +36,51 @@
     </listitem>
 -->
     <listitem>
+      <para>2014-02-16</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Update to man-pages-3.5.9.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Incorporate beta FHS.  Add 
+          /usr/share/ppd, /usr/libexec, /usr/share/color, 
+          /usr/local/share/color, /var/lib/color, and /usr/share/dict. 
+          </para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Incorporate beta FHS.  Remove overrides
+          for /usr/libexec: coreutils, findutils, gawk, gcc, glibc, 
+          inetutils, man-db, and tar.  Also fixes 
+          <ulink url="&lfs-ticket-root;3498">#3498</ulink>.
+          </para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Incorporate beta FHS.  Move grub sbin
+          executables from /usr/sbin to /sbin.
+          </para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Document two new glibc errors in the
+          regression tests.
+          </para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Move man-db after util-linux to satisfy
+          a test dependency.
+          </para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update automake tests to accomodate util-linux
+          in /tools and to speed the test up.
+          </para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Restore building the flex static library.
+          </para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+    <listitem>
       <para>2014-02-14</para>
       <itemizedlist>
         <listitem>
