@@ -49,11 +49,17 @@
 
 <screen><userinput remap="make">make</userinput></screen>
 
-    <note><para>The tests take a very long time: over 30 SBUs.</para></note>
+    <para>There are a couple of tests that incorrectly link to the 
+    wrong version of the flex library, so we temporarily work around
+    the problem.  Also, using the -j4 make option speeds up the tests, even on
+    systems with only one processor due to internal delays in individual
+    tests.  To test the results, issue:</para>
 
-    <para>To test the results, issue:</para>
-
-<screen><userinput remap="test">make check</userinput></screen>
+<screen><userinput remap="test">mv -v /usr/lib/libfl.{so,save}
+ln -sv libfl.a /usr/lib/libfl.so
+make -j4 check
+rm -v /usr/lib/libfl.so
+mv -v /usr/lib/libfl.{save,so}</userinput></screen>
 
     <para>Install the package:</para>
 
