@@ -72,7 +72,6 @@ cd ../gcc-build</userinput></screen>
 
 <screen><userinput remap="configure">SED=sed                                            \
 ../gcc-&gcc-version;/configure --prefix=/usr               \
-                       --libexecdir=/usr/lib       \
                        --enable-shared             \
                        --enable-threads=posix      \
                        --enable-__cxa_atexit       \
