@@ -48,7 +48,6 @@
     <para>Prepare Inetutils for compilation:</para>
 
 <screen><userinput remap="configure">./configure --prefix=/usr  \
-    --libexecdir=/usr/sbin \
     --localstatedir=/var   \
     --disable-logger       \
     --disable-syslogd      \
