@@ -48,8 +48,7 @@
 
 <screen><userinput remap="configure">FORCE_UNSAFE_CONFIGURE=1  \
 ./configure --prefix=/usr \
-            --bindir=/bin \
-            --libexecdir=/usr/sbin</userinput></screen>
+            --bindir=/bin</userinput></screen>
 
     <variablelist>
       <title>The meaning of the configure options:</title>
