@@ -22,7 +22,7 @@
 <!ENTITY automake-md5 "7fc29854c520f56b07aa232a0f880292">
 <!ENTITY automake-home "&gnu-software;automake/">
 <!ENTITY automake-ch6-du "100 MB">
-<!ENTITY automake-ch6-sbu "less than 0.1 SBU (34.1 SBU with tests)">
+<!ENTITY automake-ch6-sbu "less than 0.1 SBU (about 12 SBU with tests)">
 
 <!ENTITY bash-version "4.2">
 <!ENTITY bash-size "6,845 KB">
@@ -385,10 +385,10 @@
 <!ENTITY man-db-ch6-du "27 MB">
 <!ENTITY man-db-ch6-sbu "0.5 SBU">
 
-<!ENTITY man-pages-version "3.58">
-<!ENTITY man-pages-size "1,170 KB">
+<!ENTITY man-pages-version "3.59">
+<!ENTITY man-pages-size "1,172 KB">
 <!ENTITY man-pages-url "http://www.kernel.org/pub/linux/docs/man-pages/man-pages-&man-pages-version;.tar.xz">
-<!ENTITY man-pages-md5 "539698a70e0338551d22c24011c03186">
+<!ENTITY man-pages-md5 "d8e4d8287a76ee861351b905044c8e92">
 <!ENTITY man-pages-home "http://www.kernel.org/doc/man-pages/">
 <!ENTITY man-pages-ch6-du "23 MB">
 <!ENTITY man-pages-ch6-sbu "less than 0.1 SBU">
@@ -554,10 +554,10 @@
 <!ENTITY tzdata-ch6-du "6.4 MB">
 <!ENTITY tzdata-ch6-sbu "less than 0.1 SBU">
 
-<!ENTITY udev-lfs        "udev-lfs-&systemd-version;-2">
+<!ENTITY udev-lfs        "udev-lfs-&systemd-version;-3">
 <!ENTITY udev-lfs-size   "29 KB">
 <!ENTITY udev-lfs-url    "&anduin-other;&udev-lfs;.tar.bz2">
-<!ENTITY udev-lfs-md5    "ed85205909de6e4f96ea2b0ebc57df7e">
+<!ENTITY udev-lfs-md5    "c0231ff619e567a9b11f912d8a7a404a">
 <!ENTITY udev-lfs-home   " ">
 
 <!ENTITY util-linux-version "2.24.1">
